style.css
.sidebar {
  height: 100%; /* 100% Full-height */
  width: 0; /* 0 width - change this with JavaScript */
  position: fixed; /* Stay in place */
  z-index: 1; /* Stay on top */
  top: 0;
  left: 0;
  background-color: #111; /* Black*/
  overflow-x: hidden; /* Disable horizontal scroll */
  padding-top: 60px; /* Place content 60px from the top */
  transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
}

/* The sidebar links */
.sidebar a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: #818181;
  display: block;
  transition: 0.3s;
}

/* When you mouse over the navigation links, change their color */
.sidebar a:hover {
  color: #f1f1f1;
}

/* Position and style the close button (top right corner) */
.sidebar .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

/* The button used to open the sidebar */
.openbtn {
  font-size: 20px;
  cursor: pointer;
  background-color: #111;
  color: white;
  padding: 10px 15px;
  border: none;
  position: fixed;
}

.openbtn:hover {
  background-color: #444;
}

/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
#main {
  transition: margin-left .5s; /* If you want a transition effect */
  padding: 20px;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
  .sidebar {padding-top: 15px;}
  .sidebar a {font-size: 18px;}
}

#btnrooms {
  margin-left: 3rem;
  background-color: #2b2b2b;
  color: white;
  padding: 10px 15px;
  font-size: 30px;
  font-family: "Arial", sans-serif;
  border: none;
  border-radius: 10px;
}

#chat {
  text-align: right;
  margin-top: 2rem;
  color: #111;
  display: flex;
  flex-direction: column;
  align-items: stretch; 
  width: 100%;  
}

#message {
  border: 10px solid #eeeeee;
  border-radius: 10px;
  margin: 10px;
  display: flex;
  font-size: 19px;
  background-color: #eeeeee;
  flex-direction: column;
  align-items: flex-end;
  width: fit-content;
  max-width: 70%;
  align-self: flex-end;
  box-sizing: border-box;
  padding: 10px;
}
 
#text_message {
  border: 10px solid #ccc;
  border-radius: 10px;
  display: inline-block;
  background-color: #ccc;
  margin-top: 1px;
  overflow-wrap: break-word;
  margin-bottom: 1px;
  max-width: 100%;
} 


#username {
  font-size: 15px;
  font-weight: bold;
  color: #111;
  margin-bottom: 1px;
  padding-bottom: 1px;
  margin-top: 1px;
}

#date {
  font-size: 12px;
  font-weight: bold;
  color: #111;
  margin-top: 1px;
  margin-bottom: 0px;
  padding-bottom: 10px;
}
 
#room-btn {
  display: block;
  width: 92%;            
  max-width: 400px;       
  background-color: #111;
  color: #ffffff;
  font-weight: 500;
  font-size: 15px;
  padding: 10px 15px;
  border: 1px solid #111;
  border-radius: 4px;   
  text-align: center;
  box-sizing: border-box;
  margin: 10px auto;
}

#room-btn:hover {
  background-color: #373737;
  border-color: #373737;
}

